# kiln-compat-tracker

./: CLAUDE.md  CMakeLists.txt
common/: protocol.h  types.h
server/: auth.h  config.h  json_response.h  main.cpp  migrate.h
server/controllers/: AdminApi.cpp  AdminApi.h  DashboardApi.cpp  DashboardApi.h  ProjectApi.cpp  ProjectApi.h  WorkerApi.cpp  WorkerApi.h  WorkerMgmtApi.cpp  WorkerMgmtApi.h
server/static/: index.html
sql/: schema.sql
worker/: README.md  builder.cpp  builder.h  config.h  config.yaml  kiln-worker.service  main.cpp  platform.cpp  platform.h
